poor attempt at shadow for form and some aesthetic changes

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <section class="sign-up-section">
         <section class="left-section">
-            <header>BLAH</header>
+            <div class="logo-header">Hello</div>
         </section>
         <section class="right-section">
             <div class="heading-area">
-                <h1>This is not a real service, jsut a website made to learn to make a sign-up page</h1>
+                <h1>This is not a real service, just a website made to practice making a sign-up page</h1>
             </div>
             <div class="form-div">
                 <h1>Let's do this!</h1>
